--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,14 @@
 name: SuperShop
 version: 1.0.0 BETA
 author: SFCTeam
-description: People has been dreaming for ages, now its a reality!
+description: People has been dreaminfg for ages, now its a reality!
 main: SFC\SuperShop\Main
 api: [2.0.0, 2.1.0]
-commands: "/enchanter" 
-  shop:
-   usage: "/enchanter"
+commands: "/enchanter" "/combiner"
+  shop: "/enchanter"
+   usage: "/enchanter" "/combiner"
+   description:
+   enchanter: Uses 500 to 25000 experience points for custom enchant books
+   Books: Wither/Level 1-5/ /Haste/Level 1-3/ /Poison/Level 1-5/ /Cripple/Level 1-4 /Command Usage "/enchanter"
+   combiner: Combines books without the use of experience points/ Command Usage "/combiner"
+   
