--- a/plugin.yml
+++ b/plugin.yml
@@ -10,5 +10,6 @@ commands: "/enchanter" "/combiner"
    description:
    enchanter: Uses 500 to 25000 experience points for custom enchant books
    Books: Wither/Level 1-5/ /Haste/Level 1-3/ /Poison/Level 1-5/ /Cripple/Level 1-4 /Command Usage "/enchanter"
-   combiner: Combines books without the use of experience points/ Command Usage "/combiner"
-   
+   combiner: Combines books without the use of experience points/ Command Usage: "/combiner"
+   "/enchanter" Activate chest: 5 slots
+   Slot 1: Glass_Pane:SubName:Color=Green:500XP/Name=Common Enchant
